[package]
name = "moldybrody"
version = "0.1.0"
authors = ["Myeongseon Choi <joyms514@kaist.ac.kr>"]
edition = "2018"
readme="README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/key262yek/moldybrody"
documentation = "https://docs.rs/moldybrody"
description = """
    Rust package for Molecular dynamics and Brownian dynamics
"""
keywords = ["Molecular-Dynamics", "MD", "Brownian-Dynamics", "BD"]
categories = ["simulation"]
include = ["src/", "Cargo.toml", "Readme.md", "LICENSE-*", "COPYRIGHT"]


[dependencies]
rand = "0.8.4"
rand_pcg = "0.3.1"
rand_distr = "0.4.1"
doc-comment = "0.3.3"

