[package]
name = "moldybrody"
version = "0.1.0"
authors = ["Myeongseon Choi <joyms514@kaist.ac.kr>"]
edition = "2021"
readme="README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/key262yek/moldybrody"
documentation = "https://docs.rs/moldybrody"
description = """
    Rust package for Molecular dynamics and Brownian dynamics
"""
keywords = ["Molecular-Dynamics", "MD", "Brownian-Dynamics", "BD"]
categories = ["simulation"]
include = ["src/", "Cargo.toml", "Readme.md", "LICENSE-*", "COPYRIGHT"]

[dependencies]
rand = "0.8.4"
rand_pcg = "0.3.1"
rand_distr = "0.4.1"
doc-comment = "0.3.3"
itertools = "0.10.3"
ndarray = {version = "0.15.6", features = ["approx-0_5"]}
num-traits = "0.2.0"
num-complex = "0.4.0"
approx = {version = "0.5.0", features = ["num-complex"]}
ndarray-linalg = "0.14.1"
# ndarray-linalg = {version = "0.14.1", features = ["openblas-system"]}
# blas-src = {version = "0.8", features = ["openblas"] }
# openblas-src = {version = "0.10.4", features = ["cblas", "system"]}
moldybrody_proc = {path = "moldybrody_proc"}
clap = "3.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[workspace]
members = [
    "moldybrody_proc",
]
exclude = [
    "examples/reproduce",
    "examples/test_args",
]

[features]
default = ["parallel"]
serial = []
parallel = []

[dev-dependencies]
criterion = "0.3.4"

[lib]
doctest = false



